RBAC.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: counterapp
